# RM_Detection

./: .gitignore  CMakeLists.txt  main.cpp
Dynamic_library/Video/: HIK_Camera.avi
Dynamic_library/include/: AngleSolve.h  Armor_Observe.h  Armor_Track.h
Dynamic_library/include/HIK_Camera_H/: CameraParams.h  MvCameraControl.h
Package/Armor_Detection/src/: Armor_detection.cpp
SetParam_File/: Dnn_data.yaml  HIKCamera_Param.yaml  Solve_data.yaml
devel/: .catkin  _setup_util.py
include/: robot_status.h
src/Communication/: CMakeLists.txt  package.xml
src/HIK_Camera/: CMakeLists.txt  HIK_Camera_R_node.cpp  HIK_Camera_node.cpp  package.xml
src/Robot_Detection/: CMakeLists.txt  Robot_Detection.cpp  Robot_Detection_L.cpp  Robot_Detection_R.cpp  package.xml
src/Robot_Detection/SetParam_File/: Track_data.yaml
src/Robot_Detection/launch/: RM_Detection.launch  RM_Detection_L.launch  RM_Detection_R.launch
src/Robot_Detection/src/AngleSolve/include/: AngleSolve.h
src/Robot_Detection/src/AngleSolve/src/: AngleSolve.cpp
src/Robot_Detection/src/Armor_Detection/include/: Armor_detection.h
src/Robot_Detection/src/Armor_Detection/src/: Armor_detection.cpp  Number_DNN.cpp
src/Robot_Detection/src/Armor_Observe/include/: Armor_Observe.h
src/Robot_Detection/src/Armor_Observe/src/: Armor_Observe.cpp
src/Robot_Detection/src/Armor_Track/include/: Armor_Track.h
src/Robot_Detection/src/Armor_Track/src/: Armor_Track.cpp  Kalman.cpp
src/Serial_Device/: CMakeLists.txt  Reveice_test.cpp  Send_test.cpp  Serial_Device_Receive_L_node.cpp  Serial_Device_Receive_R_node.cpp  Serial_Device_Receive_node.cpp  Serial_Device_Send_L_node.cpp  Serial_Device_Send_R_node.cpp  Serial_Device_Send_node.cpp  package.xml
src/communication/: CMakeLists.txt
src/hik_camera/: CMakeLists.txt  HIK_Camera_L_node.cpp  HIK_Camera_R_node.cpp
src/public_include/: robot_status.h  robot_struct.h
src/robot_detection/: Robot_Detection_L.cpp  Robot_Detection_R.cpp
src/robot_msg/: CMakeLists.txt  package.xml
src/robot_msgs/: CMakeLists.txt
(+155 files in other folders)
